Added new admin features, SSE, razorpay
